--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
         <link rel="stylesheet" href="css/index.css" type="text/css" />
     </head>
     <body>
-        <div class="tablica">
+        <div class="table">
             <h2>insert your image here</h2>
         </div>
-        <div class="tablica_1">
+        <div class="table_1">
             <h1>Heading 1</h1>
             <hr>
             <p>After you enter your content, highlight the text you want to style and 
